--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,16 @@
 .DS_Store
 venv/
 __pycache__/
+logs/
+seiyuu/
 regex.txt
 test_url.txt
 *.json
+*.txt
 notes.md
+logeg.py
+mass.py
+myapp.py
+mylib.py
+scrap_seiyuu_awards.py
+award.py
