--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,16 @@
 .DS_Store
 venv/
 __pycache__/
+.vscode/
+
 logs/
 seiyuu/
-regex.txt
-test_url.txt
-*.json
-*.txt
 notes.md
 logeg.py
 mass.py
-myapp.py
-mylib.py
 scrap_seiyuu_awards.py
 award.py
 genre.py
-!sports_urls_202010032348.txt
+misc/
+data/
+test.py
